--- a/apps/proyecto/templates/lista.html
+++ b/apps/proyecto/templates/lista.html
@@ -10,11 +10,11 @@
       </a>
   </div>
   {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-            <li class="{{ message.tags }}">{{ message }}</li>
-        {% endfor %}
-    </ul>
+  {% for message in messages %}
+  <div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
+  {% endfor %}
+
+
   {% endif %}
   <table class="table table-striped table-hover">
   <thead>
