--- a/apps/proyecto/templates/nuevo.html
+++ b/apps/proyecto/templates/nuevo.html
@@ -49,6 +49,10 @@
           Asesor
           {{form_asesor.docente}}
         </div>
+        <div class="mb-3">
+          <label>Observación:</label>
+          {{form_mov.observacion}}
+        </div>
 
 
         <button class="btn btn-success">
