--- a/apps/proyecto/templates/nuevo.html
+++ b/apps/proyecto/templates/nuevo.html
@@ -2,63 +2,62 @@
 
 {% block content %}
 <section class="card card-body">
-  <div class="titleBtn mb-3">
+  <div class="d-flex justify-content-between">
     <h1>Nuevo Proyecto</h1>
-      <a class="btn btn-outline-danger heightBtn" href="{% url 'proyecto:lista' %}">
+      <a class="btn btn-outline-danger heightBtn" href="{% url 'proyecto:lista' %}" style="height: 38px">
         {% include "icon/back.html" %}
         Volver
       </a>
   </div>
-      <form method="POST" enctype="multipart/form-data">
-        {{error}}
-        {% csrf_token %}
-        <div class="mb-3">
-          <label for="{{ form.titulo.id_for_label }}">Titulo:</label>
-          {{form.titulo}}
-          {{form.titulo.error}}
-        </div>
-        <div class="mb-3">
-          <label for="{{ form.descripcion.id_for_label }}">Descripción:</label>
-          {{form.descripcion}}
-          {{form.descripcion.error}}
 
-        </div>
-        <div class="mb-3">
-          <label for="{{ form.presentacion.id_for_label }}">Fecha de presentación:</label>
-          {{form.presentacion}}
-          {{form.presentacion.error}}
-        </div>
-        <div class="mb-3">
-          <label for="{{ form.archivos.id_for_label }}">Archivos:</label>
-          {{form.archivos}}
-          {{form.archivos.error}}
-        </div>
-        <div class="mb-3">
-          <label for="estudiantes">Estudiantes:</label>
-          {{form_estud.estudiante}}
-        </div>
-        <div class="mb-3">
-          Director
-          {{form_director.docente}}
-        </div>
-        <div class="mb-3">
-          Co-Director
-          {{form_codirector.docente}}
-        </div>
-        <div class="mb-3">
-          Asesor
-          {{form_asesor.docente}}
-        </div>
-        <div class="mb-3">
-          <label>Observación:</label>
-          {{form_mov.observacion}}
-        </div>
+  <form method="POST" enctype="multipart/form-data">
+    {{error}}
+    {% csrf_token %}
+    <div class="mb-3">
+      <label for="{{ form.titulo.id_for_label }}">Titulo:</label>
+      {{form.titulo}}
+      {{form.titulo.error}}
+    </div>
+    <div class="mb-3">
+      <label for="{{ form.descripcion.id_for_label }}">Descripción:</label>
+      {{form.descripcion}}
+      {{form.descripcion.error}}
+    </div>
+    <div class="mb-3 col-6">
+      <label for="{{ form.presentacion.id_for_label }}">Fecha de presentación:</label>
+      {{form.presentacion}}
+      {{form.presentacion.error}}
+    </div>
+    <div class="mb-3">
+      <label for="{{ form.archivos.id_for_label }}">Archivos:</label>
+      {{form.archivos}}
+      {{form.archivos.error}}
+    </div>
+    <div class="mb-3">
+      <label for="estudiantes">Estudiantes:</label>
+      {{form_estud.estudiante}}
+    </div>
+    <div class="mb-3">
+      Director
+      {{form_director.docente}}
+    </div>
+    <div class="mb-3">
+      Co-Director
+      {{form_codirector.docente}}
+    </div>
+    <div class="mb-3">
+      Asesor
+      {{form_asesor.docente}}
+    </div>
+    <div class="mb-3">
+      <label>Observación:</label>
+      {{form_mov.observacion}}
+    </div>
 
-
-        <button class="btn btn-success">
-          {% include "icon/save.html" %}
-          Guardar
-        </button>
-      </form>
+    <button class="btn btn-success">
+      {% include "icon/save.html" %}
+      Guardar
+    </button>
+  </form>
 </section>
 {% endblock %}
