--- a/apps/sistema/templates/usuariosLista.html
+++ b/apps/sistema/templates/usuariosLista.html
@@ -4,8 +4,8 @@
 <section class="card card-body">
 
   <div class="d-flex justify-content-between">
-    <h1>Listado de Proyectos</h1>
-    <a class="btn btn-outline-success heightBtn" href="{% url 'proyecto:nuevo' %}" style="height: 38px">
+    <h1>Listado de Usuarios</h1>
+    <a class="btn btn-outline-success heightBtn" href="{% url 'registrar' %}" style="height: 38px">
       {% include "icon/plus.html" %}
       Crear nuevo
     </a>
@@ -20,25 +20,21 @@
   <table class="table table-striped table-hover">
   <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">Titulo</th>
-      <th scope="col">Fecha</th>
+      <th scope="col">Apellido y Nombre</th>
+      <th scope="col">DNI</th>
+      <th scope="col">Tipo de Usuario</th>
       <th scope="col">Estado</th>
       <th scope="col">Acción</th>
     </tr>
   </thead>
   <tbody>
-    {% if proyectos %}
-      {% for proyecto in proyectos %}
+    {% if usuarios %}
+      {% for usuario in usuarios %}
 
       <tr>
-        <th scope="row">{{proyecto.proyecto.id}}</th>
-        <td>{{proyecto.proyecto.titulo}}</td>
-        <td>{{proyecto.proyecto.presentacion|date:"d-m-Y"}}</td>
-        <td>{{proyecto.get_etapa_display}} - {{proyecto.get_estado_display}}</td>
-        <td>
-          <a class="btn btn-primary" href="{% url 'proyecto:ver' proyecto.proyecto.id %}">Abrir</a>
-        </td>
+        <td>{{usuario.apellido}}, {{usuario.nombre}}</td>
+        <td scope="row">{{usuario.dni}}</td>
+        <td>{{usuario.get_tipo_usuario_display}}</td>
       </tr>
       {% endfor %}
     {% else %}
