--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
           <a class="nav-link" href="{% url 'proyecto:lista' %}">Proyectos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'registrarme' %}">Registrar</a>
+          <a class="nav-link" href="{% url 'usuariosLista' %}">Usuarios</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Cerrar Sesión ({{ user.username }})</a>
